--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/yikatong-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="京津冀旅游一卡通助手，帮你轻松找到旅游的目的地，支持按区域查找，按时间段查找，我们回持续优化，提供更好的体验">
+    <meta name="keywords" content="京津冀一卡通,旅游卡,旅游年卡,景区">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>京津冀旅游一卡通助手</title>
     <script>
         if ('addEventListener' in document) {
           document.addEventListener('DOMContentLoaded', function() {
