--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,7 +32,8 @@
         if(!window.Promise) {
           document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
         }
-      </script>
+    </script>
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
