--- a/app/public/index.html
+++ b/app/public/index.html
@@ -34,6 +34,7 @@
         }
     </script>
     <link rel="stylesheet" href="./iconfont/iconfont.css">
+    <script src="./flexiable.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
